fix: add color and align for about text

--- a/christmas-shop/src/js/components/about/about.module.scss
+++ b/christmas-shop/src/js/components/about/about.module.scss
@@ -12,6 +12,7 @@
   background-color: $static-white;
   display: flex;
   border-radius: 20px;
+  text-align: left;
 }
 
 .aboutDescriptionBlock {
@@ -21,6 +22,7 @@
 
 .descriptionTitle {
   @include caption;
+  color: $primary;
   margin-bottom: 20px;
 }
 
